# ign-ci

./: Dockerfile  README.md  ignition.repos
.github/workflows/: build_docker.yaml
dummy_package/: CMakeLists.txt  package.xml
