<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dummy_package</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="vatan@picknik.ai">root</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>ament_cmake_ros</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>action_msgs</build_depend>
  <build_depend>ament_cmake</build_depend>
  <build_depend>builtin_interfaces</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>rclcpp_lifecycle</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>ament_index_cpp</build_depend>
  <build_depend>launch</build_depend>
  <build_depend>launch_ros</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rcpputils</build_depend>
  <build_depend>ros2param</build_depend>
  <build_depend>ros2run</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_msgs</build_depend>
  <build_depend>dynamixel_sdk</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>rclcpp_action</build_depend>
  <build_depend>rcutils</build_depend>
  <build_depend>tinyxml2_vendor</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>cmake</build_depend>
  <build_depend>coinor-libipopt-dev</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>ament_cmake_auto</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>plotjuggler_msgs</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>joint_state_publisher</build_depend>
  <build_depend>joint_state_publisher_gui</build_depend>
  <build_depend>moveit_kinematics</build_depend>
  <build_depend>moveit_planners_ompl</build_depend>
  <build_depend>moveit_ros_move_group</build_depend>
  <build_depend>moveit_ros_visualization</build_depend>
  <build_depend>moveit_simple_controller_manager</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>rviz2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>tf2_eigen</build_depend>
  <build_depend>qt5-qmake</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>ros2cli</build_depend>
  <build_depend>ros2node</build_depend>
  <build_depend>ignition-msgs8</build_depend>
  <build_depend>ignition-transport11</build_depend>
  <build_depend>pkg-config</build_depend>
  <build_depend>rosgraph_msgs</build_depend>
  <build_depend>ignition-gazebo6</build_depend>
  <build_depend>ignition-math6</build_depend>
  <build_depend>libgflags-dev</build_depend>
  <build_depend>image_transport</build_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>rclcpp_lifecycle</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>ament_index_cpp</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rcpputils</exec_depend>
  <exec_depend>ros2param</exec_depend>
  <exec_depend>ros2run</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>realtime_tools</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>
  <exec_depend>dynamixel_sdk</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>control_toolbox</exec_depend>
  <exec_depend>rclcpp_action</exec_depend>
  <exec_depend>rcutils</exec_depend>
  <exec_depend>tinyxml2_vendor</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>ament_cmake</exec_depend>
  <exec_depend>coinor-libipopt-dev</exec_depend>
  <exec_depend>eigen</exec_depend>
  <exec_depend>angles</exec_depend>
  <exec_depend>boost</exec_depend>
  <exec_depend>plotjuggler_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_planners_ompl</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>moveit_simple_controller_manager</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>tf2_eigen</exec_depend>
  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>qt5-qmake</exec_depend>
  <exec_depend>qtbase5-dev</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>python-transforms3d-pip</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>ros2cli</exec_depend>
  <exec_depend>ros2node</exec_depend>
  <exec_depend>rosidl_runtime_py</exec_depend>
  <exec_depend>ignition-msgs8</exec_depend>
  <exec_depend>ignition-transport11</exec_depend>
  <exec_depend>rosgraph_msgs</exec_depend>
  <exec_depend>ignition-gazebo6</exec_depend>
  <exec_depend>ignition-math6</exec_depend>
  <exec_depend>libgflags-dev</exec_depend>
  <exec_depend>image_transport_plugins</exec_depend>
  <exec_depend>rqt_image_view</exec_depend>
  <exec_depend>rqt_plot</exec_depend>
  <exec_depend>rqt_topic</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>rclcpp</test_depend>
  <test_depend>geometry_msgs</test_depend>
  <test_depend>nav_msgs</test_depend>
  <test_depend>ros_testing</test_depend>
  <test_depend>sensor_msgs</test_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>ament_lint_cmake</test_depend>
  <test_depend>ament_xmllint</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
